@@ -1,7 +1,7 @@
 // synthv1widget_preset.h
 //
 /****************************************************************************
-   Copyright (C) 2012, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2013, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -66,7 +66,7 @@ protected slots:
 
 	void newPreset();
 	void openPreset();
-	void changePreset(const QString&);
+	void activatePreset(const QString&);
 	void savePreset();
 	void deletePreset();
 	void resetPreset();
